# chacha20-poly1305-hardcaml

./: README.md  chacha_hardcaml.opam  dune-project
lib/: chacha20_block.ml  chacha20_block.mli  chacha20_block_no_mixing.ml  chacha20_column_and_diagonal_round.ml  chacha20_column_round.ml  chacha20_diagonal_round.ml  chacha20_encoder.ml  chacha20_encoder.mli  chacha_encoder.ml  chacha_encoder.mli  chacha_full_block.ml  chacha_full_block.mli  dune  lib.ml  mix_chacha_input_and_output_state.ml  mix_chacha_input_and_output_state.mli  qround.ml  qround.mli  qround_chacha_state.ml  qround_chacha_state.mli  util.ml  util.mli
lib/alinx_ax7a035/: alinx_led_rng.ml  alinx_led_rng.mli
lib/chacha20/: block.mli  chacha20.ml  chacha20_block.ml  chacha20_block_function_without_mixing.ml  chacha20_column_and_diagonal_round.ml  chacha20_column_and_diagonal_round.mli  chacha20_mixing_function.ml  chacha20_mixing_function.mli  chacha20_pipelined_block.ml  chacha20_pipelined_block_function_without_mixing.ml  chacha20_pipelined_block_function_without_mixing.mli  chacha20_pipelined_serial_encoder.ml  chacha20_pipelined_serial_encoder.mli  chacha20_qround.ml  chacha20_qround.mli  chacha20_rng.ml  chacha20_rng.mli  chacha20_serial_encoder.ml  chacha20_serial_encoder.mli  column_and_diagonal_round.ml  column_round.ml  diagonal_round.ml  mix_input_and_output_state.ml  mix_input_and_output_state.mli  qround_chacha_state.ml  qround_chacha_state.mli  serial_encoder.ml  unmixed_block.ml  util.mli
lib/poly1305/: clamp.ml  (+15 more)
rtl/: chacha20_serial_encoder.v  poly1305_serial_encoder.v
test/: dune
(+21 files in other folders)
