(lang dune 3.10)

(name chacha_hardcaml)

(generate_opam_files true)

(source
 (github jawline/chacha20-hardcaml))

(authors "Blake Loring")

(maintainers "Blake Loring")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name chacha_hardcaml)
 (synopsis "An implementation of Chacha20 and Poly1305 in Hardcaml")
 (description "An implementation of Chacha20 and Poly1305 in Hardcaml")
 (depends ocaml dune))

